Issue IMCMS-786 imcms:menu tag doesn't work: - Improve the performance of receiving menus (avoid extra queries to db)